chapter11/test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: velero
  name: console2
  labels:
    component: minio
spec:
  # ClusterIP is recommended for production environments.
  # Change to NodePort if needed per documentation,
  # but only if you run Minio in a test/trial environment, for example with Minikube.
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: http-console

  selector:
    component: minio
